--- a/sampleapp/src/main/res/layout/activity_main.xml
+++ b/sampleapp/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/mapContainer"
+    <org.maplibre.android.maps.MapView
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:layout_weight="1"
-        />
+        android:layout_height="0dp"/>
 
     <Button
         android:id="@+id/performanceTestButton"
